Dynamic config file done. Merging with data replication branch